# gluon-nlp

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pylintrc  .pytype.cfg  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  conftest.py  contributor.rst  examples  finetune_lm_estimator.py  pytest.ini  requirements.gpu-cu75.txt  requirements.gpu-cu80.txt  requirements.gpu-cu90.txt  requirements.txt  setup.py  test.sh  test_batch.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: buildwebsite.yml  conversion_tool_test.yml  data-pipeline-test.yml  data-pipeline.yml  nightly-test.yml  unittests-data.yml  unittests-gpu.yml  unittests.yml
ci/: install_dep.sh  prepare_clean_env.sh  step_doc_test.sh  step_documentation.sh  step_sanity_check.sh  step_unit_test.sh  step_unit_test_master.sh
ci/batch/: compile_notebooks.sh  submit-job.py  wait-job.py
docs/: .gitignore  404.rst  Makefile  README.txt  conf.py  contributor.rst  demo.rst  examples.rst  index.rst  install.rst  md2ipynb.py  model_zoo.rst
env/: doc.yml  py2.yml  py3-master.yml  py3.yml  pylint.yml
gluonnlp/: __init__.py  _constants.py  base.py  embedding.py  metric.py  vocab.py
mms/: README.rst  bert.py
scripts/: __init__.py  catalog.rst  index.rst  sentiment_analysis.py  sentiment_analysis.rst  word_embedding.py  word_language_model.py  word_language_model.rst
scripts/word_embeddings/tools/: CMakeLists.txt  cooccur.cc  utils.h  vocab_count.cc
tests/: README.md  test_attention_cell.py  test_data_batchify.py  test_data_filtering.py  test_data_loading.py  test_data_sampler.py  test_data_tokenizers.py  test_data_vocab.py  test_embedding.py  test_gluon_block.py  test_initializer.py  test_layers.py  test_loss.py  test_models.py  test_models_albert.py  test_models_bart.py  test_models_bert.py  test_models_electra.py  test_models_gpt2.py  test_models_mobilebert.py  test_models_mt5.py  test_models_roberta.py  test_models_t5.py  test_models_transformer.py  test_models_transformer_xl.py  test_models_xlmr.py  test_op.py  test_optimizer.py  test_sequence_sampler.py  test_utils_misc.py  test_utils_parameter.py  test_utils_preprocessing.py  test_utils_registry.py
tools/: diagnose.py  plot_bucketing_strategies.py
(+9136 files in other folders)
